--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
+    "@vercel/blob": "^0.27.3",
     "bootstrap": "^5.3.3",
     "concurrently": "^8.2.2",
     "react": "^18.3.1",
