--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "uuid": "^9.0.1"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"npx json-server heroes.json --port 3001\"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
